src/test/fixtures/syntax-error/imported-variable/Main.hp
import ImportedVariableError;

main =  
  DENY
  EXCEPT {
    ALLOW {
      Actors: Analyst
      Resources
      Actions
    }
    EXCEPT {
      DENY {
        Actors: Bob
        Resources: EMAIL
        Actions: Deletes, Updates, Reads
      }
    }
    ALLOW ImportedVariableError::alice
  };